[project]
name = "ml_algorithms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
    "matplotlib>=3.9.3",
    "pandas>=2.2.3",
    "pyqt5>=5.15.11",
    "scipy>=1.14.1",
    "scikit-learn>=1.5.2",
    "typer>=0.15.0",
]
